# clayknot

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  conanfile.txt  iwyu.imp  vcpkg.json
.github/workflows/: build.yml  build_and_test.yml  check.yml  static_analysis.yml  tests.yml
apps/: CMakeLists.txt
apps/editor/: CMakeLists.txt
apps/editor/src/: main.cpp
clayknot/: Cargo.toml
clayknot/src/: graph.rs  input.rs  lib.rs  node.rs  output.rs  port.rs
clayknot/tests/: clayknot.rs
clayknot_nodes/: Cargo.toml
clayknot_nodes/src/: lib.rs
clayknot_nodes/tests/: clayknot_nodes.rs
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt
libs/algorithms/include/clk/algorithms/: boolean.hpp  color.hpp  math.hpp  text.hpp
libs/algorithms/src/: boolean.cpp  color.cpp  init.cpp  math.cpp  text.cpp
libs/base/: CMakeLists.txt
libs/base/include/clk/base/: algorithm.hpp  algorithm_node.hpp  any_input.hpp  any_output.hpp  constant_node.hpp  data.hpp  graph.hpp  input.hpp  node.hpp  output.hpp  passthrough_node.hpp  port.hpp  sentinel.hpp  split_node.hpp
libs/base/src/: algorithm.cpp  algorithm_node.cpp  any_input.cpp  any_output.cpp  constant_node.cpp  graph.cpp  input.cpp  node.cpp  output.cpp  passthrough_node.cpp  port.cpp  split_node.cpp
libs/clkvk/: CMakeLists.txt
libs/clkvk/include/clk/clkvk/: application_info.hpp  enumerate_instance_extensions.hpp  enumerate_instance_layers.hpp  init.hpp  instance.hpp  required_windowing_extensions.hpp  window.hpp
libs/clkvk/src/: init.cpp
libs/gui/: CMakeLists.txt
libs/gui/include/clk/gui/: imgui_conversions.hpp  init.hpp  panel.hpp
libs/gui/include/clk/gui/widgets/: action_widget.hpp  composite_editor.hpp  composite_viewer.hpp  container_editors.hpp  container_viewers.hpp  data_reader.hpp  data_widget.hpp  data_writer.hpp  default_editors.hpp  default_viewers.hpp  editor.hpp  graph_editor.hpp  graph_viewer.hpp  profiler_editor.hpp  profiler_viewer.hpp  viewer.hpp  widget.hpp  widget_factory.hpp  widget_group.hpp  widget_setting.hpp  widget_tree.hpp
libs/gui/src/: init.cpp  panel.cpp
libs/gui/src/internal/: imgui_guard.hpp  layout_solver.cpp  layout_solver.hpp  node_editors.cpp  node_editors.hpp  node_viewers.cpp  node_viewers.hpp  port_color.hpp  port_editors.cpp  port_editors.hpp  port_viewers.cpp  port_viewers.hpp  selection_manager.hpp  widget_cache.hpp
libs/gui/src/widgets/: action_widget.cpp  data_widget.cpp  graph_editor.cpp  graph_viewer.cpp  profiler_editor.cpp  widget.cpp  widget_tree.cpp
libs/util/: CMakeLists.txt
libs/util/include/clk/util/: bounded.hpp  color_rgb.hpp  color_rgba.hpp  data_type_name.hpp  predicates.hpp  profiler.hpp  projections.hpp  static_string.hpp  time_unit.hpp  timestamp.hpp  traits.hpp  type_list.hpp
libs/util/src/: color_rgb.cpp  color_rgba.cpp  profiler.cpp  timestamp.cpp
tests/: CMakeLists.txt
tests/base/: CMakeLists.txt
tests/src/base/: nodes.cpp  ports.cpp
tests/src/util/: colors.cpp
tests/util/: CMakeLists.txt
tests/util/src/: static_string.cpp
